--- a/app/src/main/res/layout/photo_activity_detail.xml
+++ b/app/src/main/res/layout/photo_activity_detail.xml
@@ -2,7 +2,7 @@
 <LinearLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
+    android:layout_height="wrap_content"
     android:orientation="vertical">
 
     <LinearLayout
@@ -24,86 +24,66 @@
         android:layout_height="wrap_content"
         android:background="@color/white"
         android:orientation="vertical"
-        android:layout_marginTop="20dp"
+        android:layout_marginTop="40dp"
         android:layout_marginLeft="20dp"
         android:layout_marginRight="20dp">
 
         <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="0dp"
+            android:layout_height="wrap_content"
+            android:weightSum="2"
             android:layout_marginBottom="2dp"
-            android:layout_weight="1.2"
-            android:gravity="start"
             android:orientation="horizontal">
 
             <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="match_parent"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
                 android:fontFamily="@font/nunito_bold"
-                android:gravity="center|start"
-                android:text="TITLE"
+                android:text="Title"
                 android:textColor="@color/darkgrey"
-                android:textSize="15sp" />
+                android:textSize="18sp"
+                android:textStyle="bold"/>
 
             <TextView
-                android:id="@+id/date_and_time"
-                android:layout_width="wrap_content"
-                android:layout_height="match_parent"
-                android:layout_marginLeft="189dp"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:layout_marginLeft="10dp"
                 android:fontFamily="@font/nunito_bold"
-                android:gravity="center|start"
-                android:text="12 Oct 2021 x 11.04"
+                android:text="Date"
                 android:textColor="@color/darkgrey"
-                android:textSize="15sp" />
+                android:textSize="18sp"
+                android:textStyle="bold" />
 
         </LinearLayout>
 
         <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="0dp"
-            android:layout_weight="1.2"
-            android:gravity="start"
+            android:layout_height="wrap_content"
+            android:layout_marginBottom="10dp"
             android:orientation="horizontal">
 
             <TextView
-                android:id="@+id/title_detail"
-                android:layout_width="wrap_content"
-                android:layout_height="match_parent"
-                android:fontFamily="@font/raleway_bold"
-                android:gravity="center|start"
+                android:id="@+id/photo_title"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:fontFamily="@font/raleway_medium"
                 android:text="Me at a Zoo"
                 android:textColor="@color/darkgreen"
-                android:textSize="16sp" />
-
-        </LinearLayout>
-
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="0dp"
-            android:layout_marginTop="15dp"
-            android:layout_marginBottom="2dp"
-            android:layout_weight="1.2"
-            android:gravity="start"
-            android:orientation="horizontal">
+                android:textSize="18sp" />
 
             <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="match_parent"
-                android:fontFamily="@font/nunito_bold"
-                android:gravity="center|start"
-                android:text="DESCRIPTION"
+                android:id="@+id/photo_date"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:layout_marginLeft="10dp"
+                android:fontFamily="@font/raleway_medium"
+                android:text="12 Oct 2021"
                 android:textColor="@color/darkgrey"
-                android:textSize="15sp" />
-
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="match_parent"
-                android:layout_marginLeft="139dp"
-                android:fontFamily="@font/nunito_bold"
-                android:gravity="center|start"
-                android:text="LOCATION"
-                android:textColor="@color/darkgrey"
-                android:textSize="15sp" />
+                android:textSize="18sp" />
 
         </LinearLayout>
 
@@ -111,48 +91,55 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginBottom="2dp"
+            android:orientation="horizontal">
+            <TextView
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:fontFamily="@font/nunito_bold"
+                android:text="Description"
+                android:textColor="@color/darkgrey"
+                android:textSize="18sp"
+                android:textStyle="bold" />
+            <TextView
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:layout_marginLeft="10dp"
+                android:fontFamily="@font/nunito_bold"
+                android:text="Location name"
+                android:textColor="@color/darkgrey"
+                android:textSize="18sp"
+                android:textStyle="bold" />
+
+        </LinearLayout>
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginBottom="20dp"
             android:orientation="horizontal">
 
             <TextView
                 android:id="@+id/description_detail"
-                android:layout_width="180dp"
+                android:layout_width="0dp"
                 android:layout_height="wrap_content"
-                android:fontFamily="@font/raleway_bold"
-                android:gravity="center|start"
-                android:text="Lorem ipsum dolor sit amet, Lorem ipsum dolor sit amet, Lorem ipsum dolor sit amet, Lorem ipsum dolor sit amet, Lorem ipsum dolor sit amet, Lorem ipsum dolor sit amet, Lorem ipsum dolor sit amet, Lorem ipsum dolor sit amet, Lorem ipsum dolor sit amet, Lorem ipsum dolor sit amet, Lorem ipsum dolor sit amet, Lorem ipsum dolor sit amet, Lorem ipsum dolor sit amet, Lorem ipsum dolor sit amet, Lorem ipsum dolor sit amet, Lorem ipsum dolor sit amet, Lorem ipsum dolor sit amet, Lorem ipsum dolor sit amet, Lorem ipsum dolor sit amet, Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua."
+                android:layout_weight="1"
+                android:fontFamily="@font/raleway_medium"
+                android:text="Lorem ir sit amet, Lorem ipsum dolor sit scing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua."
                 android:textColor="@color/darkgreen"
-                android:textSize="16sp" />
+                android:textSize="18sp" />
 
             <TextView
                 android:id="@+id/location_detail"
-                android:layout_width="135dp"
+                android:layout_width="0dp"
                 android:layout_height="wrap_content"
-                android:layout_marginLeft="52dp"
-                android:fontFamily="@font/raleway_bold"
-                android:gravity="center|start"
+                android:layout_weight="1"
+                android:layout_marginLeft="10dp"
+                android:fontFamily="@font/raleway_medium"
                 android:text="Big monument in a tree"
                 android:textColor="@color/darkgreen"
-                android:textSize="16sp" />
-
-        </LinearLayout>
-
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="0dp"
-            android:layout_marginTop="15dp"
-            android:layout_marginBottom="2dp"
-            android:layout_weight="1"
-            android:gravity="start"
-            android:orientation="horizontal">
-
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="match_parent"
-                android:fontFamily="@font/nunito_medium"
-                android:gravity="center|start"
-                android:text="DETAILS"
-                android:textColor="@color/darkgrey"
-                android:textSize="13sp" />
+                android:textSize="18sp" />
 
         </LinearLayout>
 
@@ -161,17 +148,28 @@
             android:layout_height="wrap_content"
             android:layout_marginBottom="2dp"
             android:orientation="horizontal">
-
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:fontFamily="@font/nunito_bold"
+                android:text="Details (Metadata)"
+                android:textColor="@color/darkgrey"
+                android:textSize="16sp"
+                android:textStyle="bold"/>
+        </LinearLayout>
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginBottom="2dp"
+            android:orientation="horizontal">
             <TextView
                 android:id="@+id/photo_detail"
                 android:layout_width="wrap_content"
-                android:layout_height="match_parent"
-                android:fontFamily="@font/nunito_medium"
-                android:gravity="center|start"
+                android:layout_height="wrap_content"
+                android:fontFamily="@font/raleway_medium"
                 android:text="IMG_54285628"
                 android:textColor="@color/darkgrey"
-                android:textSize="10sp" />
-
+                android:textSize="16sp" />
         </LinearLayout>
 
         <LinearLayout
@@ -179,17 +177,15 @@
             android:layout_height="wrap_content"
             android:layout_marginBottom="2dp"
             android:orientation="horizontal">
-
             <TextView
                 android:id="@+id/phone_detail"
                 android:layout_width="wrap_content"
-                android:layout_height="match_parent"
-                android:fontFamily="@font/nunito_medium"
-                android:gravity="center|start"
+                android:layout_height="wrap_content"
+                android:fontFamily="@font/raleway_medium"
                 android:text="Android"
                 android:textColor="@color/darkgrey"
-                android:textSize="10sp" />
-
+                android:textSize="16sp" />
         </LinearLayout>
+
     </LinearLayout>
 </LinearLayout>
