--- a/app/src/main/res/layout/location_activity.xml
+++ b/app/src/main/res/layout/location_activity.xml
@@ -13,7 +13,7 @@
         android:gravity="center"
         android:paddingTop="20dp"
         android:paddingBottom="20dp"
-        android:text="@string/heading_locations"
+        android:text="@string/heading_location"
         android:textColor="@color/white"
         android:textSize="20sp"
         android:textStyle="bold"
