--- a/app/src/main/res/layout/location_reviews_activity.xml
+++ b/app/src/main/res/layout/location_reviews_activity.xml
@@ -90,7 +90,7 @@
         </LinearLayout>
 
         <TextView
-            android:id="@+id/no_trips"
+            android:id="@+id/no_reviews"
             android:layout_width="wrap_content"
             android:layout_height="match_parent"
             android:layout_marginTop="30dp"
